<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">
    <TextView
            android:text="@string/txt_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/txt_profile_edit"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            android:drawablePadding="20dp" app:drawableStartCompat="@drawable/ic_baseline_edit_24"
            android:gravity="center_vertical" android:paddingStart="20dp" android:paddingEnd="15dp"/>
    <TextView
            android:text="@string/txt_share_app"
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/txt_share_app"
            app:layout_constraintTop_toBottomOf="@id/txt_profile_edit"
            app:layout_constraintStart_toStartOf="@id/txt_profile_edit" android:layout_marginTop="16dp"
            app:drawableStartCompat="@drawable/ic_baseline_share_24" android:textSize="24sp"
            android:drawablePadding="20dp" android:gravity="center_vertical" android:paddingStart="20dp"
            android:paddingEnd="20dp"/>
    <TextView
            android:text="@string/txt_about"
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/txt_about"
            app:layout_constraintTop_toBottomOf="@id/txt_share_app"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp" android:textSize="24sp"
            android:drawablePadding="20dp"
            app:drawableStartCompat="@drawable/ic_baseline_info_24" android:paddingStart="20dp"
            android:paddingEnd="20dp" android:gravity="center_vertical"/>
    <TextView
            android:text="@string/txt_logoff"
            android:layout_width="match_parent"
            android:layout_height="60dp" android:id="@+id/txt_exit" android:paddingStart="20dp"
            android:paddingEnd="20dp" android:gravity="center_vertical"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_about"
            android:layout_marginTop="16dp" app:drawableStartCompat="@drawable/ic_baseline_exit_to_app_24"
            android:drawablePadding="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>