<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".Auth.LoginActivity" android:isScrollContainer="true"
        android:focusable="true" android:focusableInTouchMode="true">

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:layout_marginTop="48dp"
            android:layout_alignParentStart="true" android:text="@string/txt_welcome"
            android:textSize="36sp" android:textColor="@color/colorTextPrimary"
            android:id="@+id/txt_welcome" android:layout_marginStart="16dp"/>

    <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/txt_login_email" android:layout_below="@id/txt_welcome"
            android:layout_alignParentStart="true" android:layout_marginStart="24dp"
            android:text="@string/txt_email" android:textSize="18sp" android:layout_marginTop="40dp"/>

    <EditText
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:inputType="textEmailAddress" android:ems="10"
            android:id="@+id/edit_login_email" android:layout_marginHorizontal="24dp"
            android:layout_alignParentStart="true" android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true" android:layout_below="@id/txt_login_email"
            android:labelFor="@id/txt_username"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/edit_login_email"
            android:layout_height="wrap_content" android:id="@+id/txt_login_password"
            android:layout_alignParentStart="true" android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_password" android:textSize="18sp"/>

    <EditText
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:inputType="textPassword" android:ems="10"
            android:id="@+id/edit_login_password" android:layout_marginHorizontal="24dp"
            android:layout_below="@id/txt_login_password" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" android:layout_marginTop="8dp"/>

    <Button
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:id="@+id/btn_login" android:layout_below="@id/edit_login_password"
            android:layout_marginHorizontal="24dp" android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"
            android:text="@string/txt_login" android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent" android:paddingVertical="20dp"
            android:textSize="18sp"/>

    <Button
            android:layout_height="wrap_content" android:layout_width="0dp"
            android:text="@string/txt_signup" android:textColor="@android:color/white"
            android:id="@+id/btn_login_signup" android:layout_below="@id/btn_login"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/colorAccentDark" android:textSize="18sp"
            android:paddingVertical="20dp"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/progressBar_login" android:layout_centerInParent="true"
            android:visibility="invisible"/>

</RelativeLayout>