<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Auth.SignupActivity" android:gravity="center_vertical" android:isScrollContainer="true">

    <TextView
            android:text="@string/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_sign_up_name"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:textSize="18sp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_sign_up_name"
            android:layout_below="@id/txt_sign_up_name"
            android:layout_marginTop="8dp" android:layout_alignParentStart="true"
            android:layout_marginStart="8dp" android:layout_alignParentEnd="true" android:layout_marginEnd="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_sign_up_email"
            android:layout_below="@id/edit_sign_up_name"
            android:layout_marginTop="8dp" android:layout_alignParentStart="true"
            android:layout_marginStart="8dp" android:text="@string/txt_email" android:textSize="18sp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10" android:id="@+id/edit_sign_up_email"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_alignParentStart="true" android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/txt_sign_up_email" android:labelFor="@id/txt_username"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_sign_up_password"
            android:layout_alignParentStart="true" android:layout_marginStart="8dp"
            android:layout_below="@id/edit_sign_up_email" android:layout_marginTop="8dp"
            android:text="@string/txt_password" android:textSize="18sp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_sign_up_password"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_below="@id/txt_sign_up_password" android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txt_sign_up_confirm_password"
            android:layout_alignParentStart="true" android:layout_marginStart="8dp"
            android:layout_below="@id/edit_sign_up_password" android:layout_marginTop="8dp"
            android:text="@string/txt_confirm_password" android:textSize="18sp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_sign_up_confirm_password"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_below="@id/txt_sign_up_confirm_password" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/txt_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/btn_sign_up"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true" android:layout_alignParentStart="true"
            android:layout_below="@id/edit_sign_up_confirm_password" android:layout_marginTop="18dp"
            android:backgroundTint="@color/colorAccent" android:textColor="@android:color/white"
            android:paddingTop="20dp" android:paddingBottom="20dp" android:textSize="18sp"/>

</RelativeLayout>